logging + bug fix