@@ -68,6 +68,7 @@ public class UserService implements IUserService {
 
     @Override
     public UserDTO getUserById(UUID id) {
+        logger.log("Getting user by id with id " + id);
         try {
             User user = repository.findById(id)
                     .orElseThrow(() -> new BaseNotFoundException(EntityType.User, id));
@@ -88,6 +89,7 @@ public class UserService implements IUserService {
     @Override
     public FullUserDTO getFullUserById(UUID id) {
         try {
+            logger.log("Getting full user by id for user with id " + id);
             return getFullUserByUser(getUserById(id));
         } catch (Exception e) {
             logger.log(e.getMessage());
@@ -97,15 +99,18 @@ public class UserService implements IUserService {
 
     @Override
     public List<UUID> getFriendUserIdsByUserId(UUID id) {
+        logger.log("Getting friend user ids for user with id " + id);
         try {
             // Fetch FriendTag entities related to the given user (for example, by userId)
             List<FriendTag> friendTags = friendTagRepository.findByOwnerId(id);
 
             // Retrieve the user IDs associated with those FriendTags
-            return friendTags.stream()
+            List<UUID> friendIds = friendTags.stream()
                     .flatMap(friendTag -> uftRepository.findFriendIdsByTagId(friendTag.getId()).stream())
                     .distinct() // Remove duplicates
-                    .collect(Collectors.toList());
+                    .toList();
+            logger.log("Found friend ids " + friendIds);
+            return friendIds;
         } catch (Exception e) {
             logger.log(e.getMessage());
             throw e;
@@ -127,8 +132,10 @@ public class UserService implements IUserService {
 
     @Override
     public Map<FriendTag, UUID> getOwnerUserIdsMap() {
+        logger.log("Getting owner user ids map");
         try {
-            List<FriendTag> friendTags = friendTagRepository.findAll();
+            List<FriendTag> friendTags = friendTagRepository.findAll(); // TODO: don't find by all
+            logger.log("Friend tags found: " + friendTags.size());
             return friendTags.stream()
                     .collect(Collectors.toMap(
                             friendTag -> friendTag,
@@ -142,6 +149,7 @@ public class UserService implements IUserService {
 
     @Override
     public Map<FriendTag, List<UUID>> getFriendUserIdsMap() {
+        logger.log("Getting friend user ids map");
         try {
             // Fetch all FriendTags
             List<FriendTag> friendTags = friendTagRepository.findAll();
@@ -339,6 +347,7 @@ public class UserService implements IUserService {
 
     @Override
     public List<UserDTO> getFriendsByUserId(UUID userId) {
+        logger.log("Getting friends (user entities) by user id " + userId);
         try {
             // Get the FriendTags associated with the user (assuming userId represents the owner of friend tags)
             FriendTag everyoneTag = friendTagRepository.findEveryoneTagByOwnerId(userId);
@@ -515,16 +524,17 @@ public class UserService implements IUserService {
 
     @Override
     public FullUserDTO getFullUserByUser(UserDTO user) {
+        logger.log("Getting full user by user: " + user.toString());
         try {
             return new FullUserDTO(
                     user.id(),
-                    user.friendIds() == null ? null : convertUsersToFullUsers(getFriendsByUserId(user.id())),
+                    convertUsersToFullUsers(getFriendsByUserId(user.id())),
                     user.username(),
                     user.profilePicture(),
                     user.firstName(),
                     user.lastName(),
                     user.bio(),
-                    user.friendTagIds() == null ? null : friendTagService.convertFriendTagsToFullFriendTags(friendTagService.getFriendTagsByOwnerId(user.id())),
+                    friendTagService.convertFriendTagsToFullFriendTags(friendTagService.getFriendTagsByOwnerId(user.id())),
                     user.email()
             );
         } catch (Exception e) {
@@ -535,6 +545,7 @@ public class UserService implements IUserService {
 
     @Override
     public List<FullUserDTO> convertUsersToFullUsers(List<UserDTO> users) {
+        logger.log("Converting users to full users: " + users.toString());
         try {
             return users.stream()
                     .map(this::getFullUserByUser)
@@ -548,8 +559,14 @@ public class UserService implements IUserService {
     @Override
     public FullUserDTO getFullUserByUsername(String username) {
         try {
+            logger.log("Getting full user for " + username);
             User user = repository.findByUsername(username);
-            System.out.println("LOGGING IN USER:" + user.getUsername());
+            if (user == null) {
+                logger.log("Could not find user " + username);
+                throw new BaseNotFoundException(EntityType.User, username);
+            } else {
+                logger.log("Found user " + username);
+            }
             return getFullUserById(user.getId());
         } catch (Exception e) {
             logger.log(e.getMessage());
